2004-12-16  Andras Varga

	* cobject.h: setName() made virtual (needs to be overridden in cModule)

	* cmodule.h: added lastsubmodp (speeds up insertSubmodule())

	* cenvir.h: removed ev.getDisplayString() with no replacement

2004-12-10  Andras Varga

	* csimul.h: added getUniqueNumber(), for generating unique IDs for
	models

2004-12-08  Andras Varga

	* cenvir.h: added getParameterUseDefault() to support omnetpp.ini's
	<paramname>.use-default=yes option

2004-11-27  Andras Varga

	* added cvisitor.h, nearly all files changed: old forEach(do_fn) 
	changed	to forEachChild(cVisitor *) (Visitor pattern)

2004-11-25  Andras Varga

	* cmodule.h: displayStringAsParent() renamed to backgroundDisplay-
	String() (compatibility #define added)

	* cchannel.h: cSimpleChannel renamed to cBasicChannel (compatibility 
	#define added)

2004-11-23  ------ omnetpp-3.0b1 released ------

2004-11-18  Andras Varga

	* index.h: title page change; adjustments in doxygen comments in other
	headers

2004-11-03  ------ omnetpp-3.0a9 released ------

2004-11-02  Andras Varga

	* csimplemodule.h: expanded scheduleAt() comment, to call attention
	to related methods.

2004-10-25  Andras Varga

	* added crng.h

	* cenvir.h: added methods int numRNGs() and cRNG *rng(int k), which 
	allow access to the RNGs. The concept is that there are a number
	of RNGs available for the simulation, numbered globaly 0..N. 
	Every module uses one or more RNGs identified with "module-local RNG 
	numbers", and every local RNG number maps to a global RNGs -- and you
	can specify the mapping. Thus e.g. several module types can all work
	with RNG 0 (local RNG number), and you map some modules to physical
	RNG 0, others to physical RNG 1, and so on.

	* cenvir.h: added getRNGMappingFor(cModule *) which sets up the mapping
	in the given module

	* cmodule.h: added cRNG *rng(int k) which returns the RNG of the given
	local RNG number. This function maps k to a physical RNG number and 
	calls ev.rng(k) with it.
